# MonkeyTyper-Game

./: .gitignore  CMakeLists.txt  Game.cpp  Game.h  MainMenu.cpp  MainMenu.h  README.md  Scoreboard.cpp  Scoreboard.h  Settings.cpp  Settings.h  Word.cpp  Word.h
assets/TextFiles/: long.txt  medium.txt  scores.txt  short.txt
